--- a/src/components/mdx/StorybookDemo/StoryBookDemo.module.scss
+++ b/src/components/mdx/StorybookDemo/StoryBookDemo.module.scss
@@ -1,2 +1,15 @@
 .root {
 }
+
+.iframeContainer {
+  width: 100%;
+  margin-top: 8px;
+  padding: 8px 12px;
+  border: 1px dashed rgb(var(--lsd-border-primary));
+
+  iframe {
+    width: 100%;
+    height: 400px;
+    background-color: transparent;
+  }
+}
