--- a/src/components/mdx/StorybookDemo/StoryBookDemo.module.scss
+++ b/src/components/mdx/StorybookDemo/StoryBookDemo.module.scss
@@ -4,12 +4,11 @@
 .iframeContainer {
   width: 100%;
   margin-top: 8px;
-  padding: 8px 12px;
-  border: 1px dashed rgb(var(--lsd-border-primary));
 
   iframe {
+    transform: translate(-20px, -4rem);
     width: 100%;
-    height: 400px;
+    height: 6000px;
     background-color: transparent;
   }
 }
