--- a/src/components/mdx/StorybookDemo/StoryBookDemo.module.scss
+++ b/src/components/mdx/StorybookDemo/StoryBookDemo.module.scss
@@ -6,7 +6,7 @@
   margin-top: 8px;
 
   iframe {
-    transform: translate(-20px, -4rem);
+    transform: translateY(-20px);
     width: 100%;
     height: 6000px;
     background-color: transparent;
