--- a/src/components/mdx/CardWithIcon/CardWithIcon.module.scss
+++ b/src/components/mdx/CardWithIcon/CardWithIcon.module.scss
@@ -2,6 +2,7 @@
   height: 146px;
   border: 1px solid rgb(var(--lsd-border-primary));
   padding: 16px;
+  user-select: none;
 }
 
 .linkContainer {
