--- a/src/components/mdx/ImageGrid/ImageGrid.module.scss
+++ b/src/components/mdx/ImageGrid/ImageGrid.module.scss
@@ -49,8 +49,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  height: 90vh;
-  width: 90vw;
+  max-height: 90vh;
+  max-width: 90vw;
 
   display: block;
   object-fit: contain;
