--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -27,3 +27,8 @@
   margin-bottom: 24px;
   margin-top: 40px;
 }
+
+pre {
+  background-color: rgb(var(--lsd-theme-secondary)) !important;
+  border: 1px solid rgb(var(--lsd-border-primary)) !important;
+}
